--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
         .popup button.update:hover {
             background-color: darkred;
         }
+        @media (max-width: 442px) {
+            .popup {
+                height: 100vh;
+            }
+        }
     </style>
 </head>
 <body>
