--- a/Troubleshot.html
+++ b/Troubleshot.html
@@ -185,7 +185,7 @@
         <h1>ALERT !</h1>
         <p>Multiple suspicious files and Virus found in your device. Contact Support for further help.</p>
         <h3>Error CODE: EBRX16X76D</h3>
-        <button id="askExpertButton">Call Now</button>
+        <button id="askExpertButton">Contact Chat Support</button>
     </div>
 
     <script>
