--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 <body>
     <div class="popup">
-        <img src="https://clickynext.com/spam_shield/blocker/47514_lands_v3/cleaner-update_p1_2-nopush/images/warning_icon.png"
+        <img src="./warning.png"
             alt="">
         <h1>WARNING! UPDATE FOR ANDROID IS RECOMMENDED!</h1>
         <p>Your phone <strong>undefined</strong> can work faster. We released an update, and it is recommended for every
@@ -128,7 +128,7 @@
         <p>Update now for <span style="color: yellow;">FREE</span> to clean and boost your Android immediately!</p>
         <div class="timer">00 min 30 sec</div>
         <div class="android-icon">
-            <img src="https://clickynext.com/spam_shield/blocker/47514_lands_v3/cleaner-update_p1_2-nopush/images/android.png"
+            <img src="./android.png"
                 alt="Android Icon">
         </div>
         <div class="buttons">
