--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <p>Update now for <span style="color: yellow;">FREE</span> to clean and boost your Android immediately!</p>
         <div class="timer">00 min 30 sec</div>
         <div class="android-icon">
-            <img src="./android.png"
+            <img src="android.png"
                 alt="Android Icon">
         </div>
         <div class="buttons">
