--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 
 <body>
     <div class="popup">
-        <img src="./warning.png"
-            alt="">
+<!--         <img src="./warning.png"
+            alt=""> -->
         <h1>WARNING! UPDATE FOR ANDROID IS RECOMMENDED!</h1>
         <p>Your phone <strong>undefined</strong> can work faster. We released an update, and it is recommended for every
             phone.</p>
